--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1 class="home">
+<!-- <h1 class="home">
 
    <a href="/login"><div class="words word-1">
       <span>welcome</span>
@@ -27,4 +27,4 @@
 
 
 
-
+ -->
