--- a/src/app/categorypage/categorypage.component.css
+++ b/src/app/categorypage/categorypage.component.css
@@ -1,117 +1,292 @@
-.container{
-width: 700px;
-height: 400px;
-/* border:3px solid  rgb(90, 90, 90); */
-color:whitesmoke;
+/* .container{
+    top: 231px;
+    left: 100px;
+    width: 219px;
+    height: 80px;
+    } */
 
-color: red;
-margin-top: 200px;
-}
+/* a{
+     padding: 3px;
+ 
+        font-size: 24px;
+        display: block;
+        text-align: center;
+        text-decoration-style: wavy;
+    }  */
 
-
-a{
- padding: 3px;
- /* margin-top: 50px;
- margin-left: 10px; */
-    font-size: 24px;
-    display: block;
-    text-align: center;
-    text-decoration-style: wavy;
+/* .example-full-width-centered{
+        color: white;
+    } */
+/*     
     
-}
-
-
-
-.example-full-width-centered{
-    color: white;
-}
-
-
-#search{
-    size: 20px;
-    color: rgb(255, 0, 0);
-background-color: white;
-}
-
-
-
-.example{
-    display: inline-flex;
-    
-  padding: 10px;
-    margin: 3px;
-   
-
-}
-
-.example :hover{
-    color:red;
+    #search{
+        size: 20px;
+        color: rgb(255, 0, 0);
     background-color: white;
+    border-radius: 10%;
+    } */
 
+/*     
+    .example{
+        display: inline-flex;
+        
+      padding: 10px;
+        margin: 3px;
+        
+       
+    
+    } */
+
+/* .example :hover{
+        color:red;
+        background-color: white;
+    
+    } */
+/* .example-form{
+        margin-left: 100px;
+        
+    }
+    .example a{
+        text-align: center;
+        color: white;
+        
+    }
+    
+    
+    .box{
+        text-align: center;
+    padding: 1px;
+
+
+    border:2px solid  rgb(52, 52, 52);
+    border-radius: 20%;
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(94, 94, 94);
+
+    width: 110px;
+    height: 80px;
+    grid-template-columns: 3;
+   
+    
+    align-items: baseline;
+    text-decoration: none;
+    color:rgb(177, 177, 177);
+      
+    }
+    
+    .box :hover{
+        color:green;
+    }
+    
+    .invitation{
+        display: flex;
+        width: 300px;
+        margin-top: 10%;
+        margin-left: 40%;
+    }
+    
+    
+    .box1 a{
+        text-align: center;
+    color:red;
+    background-color: red;
+    }
+    
+    .example .box {
+        
+        text-align: center;
+        margin-top: 20px;
+        position: center;
+    }
+    
+    
+ 
+    
+    .sign{
+        margin-left: 50px;
+        margin-top: 10px;
+    }
+    
+    
+    
+    
+    .text-left{
+        color:rgb(41, 40, 40);
+        font-family: fantasy;
+        
+    }
+    .text-center{
+        color: black;
+        font-family:'Times New Roman', Times, serif
+    }
+    
+ 
+    
+      .fa{
+          color:white;
+      }
+
+      .hr{
+          color:rgb(1, 1, 1);
+          height: 2px;
+      } */
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+
+.mainText {
+  margin-top:65px;
+  margin-left: 100px;
+  text-align: left;
+  font: normal normal bold 28px/35px Ubuntu;
+
+  letter-spacing: 0.7px;
+  color: #ffffff;
+  text-shadow: 3px 3px 5px #0000001a;
+  opacity: 1;
+  box-shadow: #ffffff1a 1px;
 }
-.example-form{
-    margin-left: 320px;
+
+.vl {
+  border-left: 2px solid #ffffff;
+  height: 80px;
+  margin-left: 15px;
+  margin-top: 65px;
+  display: flex;
 }
+.flex {
+  display: flex;
+ 
 
-
-.box{
-padding: 1px;
-/* margin-top: 10px; */
-margin-left: 4px;
-border:2px solid  rgb(111, 111, 111);
-border-radius: 20%;
-text-decoration: none;
-text-align: center;
-background-color: rgb(44, 44, 44);
-/* display: grid; */
-width: 120px;
-height: 100px;
-grid-template-columns: 3;
-/* display: flex; */
-
-align-items: baseline;
-text-decoration: none;
-color:rgb(177, 177, 177);
+  
+}
+.container1 {
+  width: 344px;
+  height: 50px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border-radius: 25px;
+  margin-top: 72px;
+  margin-left: 20px;
+  border: none;
+}
+.form {
+  text-align: left;
+  font: normal normal bold 18px/31px Ubuntu;
+  letter-spacing: 0.45px;
+  color: #cccccc;
+  margin-left: 19px;
+  display: flex;
   
 }
 
-.box :hover{
-    color:green;
+.search-button {
+ margin-right: 15px;
+ margin-top: 8px;
+  margin-left: 20px;
+  width: 22px;
+  height: 22px;
+  border: none;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  opacity: 1;
 }
 
-.invitation{
-    display: flex;
-    width: 300px;
-    margin-top: 10%;
-    margin-left: 40%;
+.search-field {
+  margin-top: 8px;
+  margin-bottom: 16px;
+  text-align: left;
+  font: normal normal bold 18px/31px Ubuntu;
+  letter-spacing: 0.45px;
+  color: #cccccc;
+  margin-left: 19px;
+}
+input {
+  border: 0;
+  outline: 0;
+}
+input:focus {
+  outline: none !important;
 }
 
 
-.box1 a{
+.example{
+margin-top: 35px;
+
+width: 219px;
+height: 80px;
+border: 3px solid #E3BE60;
+border-radius: 20px;
+opacity: 1;
+flex-direction: row;
+text-align: center;
+font: normal normal bold 25px/35px ;
+letter-spacing: 1.25px;
+position:relative;
+opacity: 1;
+margin-top: 26px;
+}
+
+
+
+
+
+
+.text{
+  margin-top: 25px;
+  
+  
+}
+
+#categories a{
+position: relative;
+display: inline-block;
+  color: #FFFFFF;
+
+}
+
+
+.example a{
     text-align: center;
-color:red;
-background-color: red;
-}
-
-.example .box {
-    
-    text-align: center;
-    margin-top: 20px;
-    position: center;
+    text-decoration: none;
+    font-size: 25px;
+    display:inline-block;
 }
 
 
-.flex{
-    display: flex;
-    flex-shrink: initial;
+
+
+.main {
+  margin-left: 100px;
+ 
+   display: flex;
+    flex-wrap:wrap;
+    gap: 20px;
+    order:3;
+   
 }
 
-#fa1{
-    margin-left: 10px;
-    margin-right:180px;
+
+
+
+
+.main :hover{
+transform: scale(1.1);
+background-color: #ffffff;
+color:#000 ;
+transition: 0.3s;
 }
-.icon{
-    display: inline-block;
-    width: 50px;
-    margin-left: 0px;
+
+
+
+
+
+
+a{
+  text-decoration: none;
+  color: #cccccc;
+  width: fit-content;
+ 
 }
+
+
+
+
+
