--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,7 +6,7 @@ label {
 .card-container.card {
   max-width: 400px !important;
   padding: 40px 40px;
-  background-color: rgb(45, 45, 45);
+  background-color: rgb(160, 160, 160);
   
 }
 
@@ -18,7 +18,7 @@ label {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0px 2px 2px rgba(226, 226, 226, 0.3);
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
@@ -43,7 +43,7 @@ label {
 }
 
 a{
-  color: red;
+  color: #f7f7f7;
   text-decoration: none;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 20px;
