--- a/src/app/vouchers/vouchers.component.css
+++ b/src/app/vouchers/vouchers.component.css
@@ -1,61 +1,158 @@
-.container{
-    width: 700px;
-    height: 400px;
-    /* border:3px solid  rgb(90, 90, 90); */
-    color:whitesmoke;
-    
-    color: red;
-    margin-top: 200px;
-    }
+.playertitle{
+ border:2px solid ;
+ width: 219px;
+height: 80px;   
+background: #FFFFFF 0% 0% no-repeat padding-box;
+border: 3px solid #E3BE60;
+opacity: 1;
+border-radius: 25px;
+margin-left: 100px;
+margin-top: 55px;
+text-align: center ;
+}
 
-    .box{
-        padding: 1px;
-        /* margin-top: 10px; */
-        margin-left: 4px;
-        border:2px solid  rgb(111, 111, 111);
-        border-radius: 20%;
-        text-decoration: none;
-        text-align: center;
-        background-color: rgb(44, 44, 44);
-        /* display: grid; */
-        width: 120px;
-        height: 100px;
-        grid-template-columns: 3;
-        /* display: flex; */
-        
-        align-items: baseline;
-        text-decoration: none;
-        color:rgb(177, 177, 177);
-          
-        }
-
-        .example-full-width-centered{
-            color: rgb(255, 0, 0);
-            size: 40px;
-        }
-        
-        a{
-            padding: 3px;
-            /* margin-top: 50px;
-            margin-left: 10px; */
-               font-size: 24px;
-               display: block;
-               text-align: center;
-               text-decoration-style: wavy;
-             
-           }
-
-        
-        .example{
-            display: inline-flex;
-            
-          padding: 10px;
-            margin: 3px;
-           
-        
-        }
-
-.example :hover{
-    color:red;
+.flex{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+#material{
+    margin-left: 41px;
+margin-top:80px;
+box-shadow: 0px 3px 10px #00000029;
+border: 2px solid #FFFFFF;
+opacity: 1;
+width: 50px;
+height: 50px;
+border-radius: 50%;
 
 }
+
+.material-icons{
+text-align: center;
+margin-left: 9px;
+margin-top: 8px;
+font-size: 28px;
+    
+}
+
+
+.text-center{
+font-family: Arial, Helvetica, sans-serif;
+font-size: 25px;
+font-weight: 600;
+margin-top: 20px;
+}
+
+.border2{
+    border: 1px solid;
+    opacity: 1;
+    width: 699px;
+    margin-left:100px;
+    margin-top: 50px;
+    margin-bottom: 25px;
+    color: #E3BE60
+    }
+
+
+ .title{
+     
+text-align: left;
+font: normal normal bold 24px/31px Ubuntu;
+letter-spacing: 0.6px;
+color: #FFFFFF;
+opacity: 1;
+text-align: left;
+font-size: 24px;
+margin-left: 100px;
+
+}
+
+ 
+
+ .footer1{
+position: absolute;
+bottom: 0;
+width: 100%;
+height:25px; 
+background: #E3BE60 0% 0% no-repeat padding-box;
+box-shadow: 0px 3px 10px #00000029;
+border-radius: 0px 0px 20px 20px;
+opacity: 1;
+
+ }
+
+
+
+ .example{
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 10px #00000029;
+    border-radius: 20px;
+    text-align: center;
+    font: normal normal bold 47px/28px Ubuntu;
+    letter-spacing: 0px;
+    margin-top: 20px;
+    width:250px;
+    height: 80px;
+    opacity: 1;
+     position:relative;
+
+    
+ }
+
+ .example a{
+     height: 120px;
+     width: 53;
+    padding: 6px;
+     text-decoration: none;
+     font-size: 47px;
+     color:#383838;
+     margin-top: 10px;
+   
+     
+ }
+
+.example a {
+   display:inline-block;
+   margin-top: 5px;
+   text-align: center;
+ }
+
+
+
+ .text{
+    text-align: center;
+    font: normal normal bold 17px/31px Ubuntu;
+    letter-spacing: 0.42px;
+    color: #FFFFFF;
+    text-transform: uppercase;
+   opacity: 1;
+  margin-bottom: 2px;
+ }
+
+
+ .button{
+     border:none;
+ }
+
+ #categories a:hover{
+     cursor: pointer;
+
+ }
+
+ .container1{
+   
+    display: flex;
+     flex-wrap:wrap;
+     gap: 20px;
+     order:3;
+     margin-left: 100px;
+ }
+
+ #material{
+
+    color: #FFFFFF;
+    
+ }
+
+
