--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
    
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
       <li class="nav-item">
-        <a href="#" class="navbar-brand"><img src="../assets/myBenefits/mybenefits-logo.svg"  height="100px" width="230px" alt=""></a>
+        <a href="categorypage" class="navbar-brand"><img src="../assets/myBenefits/mybenefits-logo.svg"  height="100px" width="230px" alt=""></a>
      
       </li>
       <li class="nav-item" *ngIf="showAdminBoard">
