--- a/src/app/categorypage/categorypage.component.css
+++ b/src/app/categorypage/categorypage.component.css
@@ -155,9 +155,23 @@
 }
 .flex {
   display: flex;
- 
+ flex-direction: row;
+ align-items: center;
+
 
   
+}
+
+.form-group{
+
+  width: 340px;
+  height: 50px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border-radius: 25px;
+ display: flex;
+  border: none;
+
+
 }
 .container1 {
   width: 344px;
@@ -178,26 +192,30 @@
   
 }
 
-.search-button {
- margin-right: 15px;
- margin-top: 8px;
-  margin-left: 20px;
-  width: 22px;
-  height: 22px;
+.material-icons{
+  width: 20px;
+  height: 20px;
+  background-color:rgb(255, 255, 255);
+  border-radius: 25px;
   border: none;
-  background: #ffffff 0% 0% no-repeat padding-box;
-  opacity: 1;
 }
+.search-btn{
+  background-color: rgb(255, 255, 255);
+  border-radius:25px;
+border: none;
 
-.search-field {
-  margin-top: 8px;
-  margin-bottom: 16px;
+}
+.form-control {
+  margin-top: 3px;
   text-align: left;
   font: normal normal bold 18px/31px Ubuntu;
   letter-spacing: 0.45px;
-  color: #cccccc;
+  color: #ffffff;
   margin-left: 19px;
 }
+
+
+
 input {
   border: 0;
   outline: 0;
@@ -222,6 +240,11 @@ letter-spacing: 1.25px;
 position:relative;
 opacity: 1;
 margin-top: 26px;
+
+
+
+
+
 }
 
 
@@ -232,13 +255,12 @@ margin-top: 26px;
 .text{
   margin-top: 25px;
   
-  
 }
 
 #categories a{
 position: relative;
 display: inline-block;
-  color: #FFFFFF;
+color: #FFFFFF;
 
 }
 
@@ -254,12 +276,13 @@ display: inline-block;
 
 
 .main {
-  margin-left: 100px;
- 
-   display: flex;
-    flex-wrap:wrap;
-    gap: 20px;
-    order:3;
+margin-left: 100px;
+display:flex;
+
+gap:20px;
+order:3;
+
+
    
 }
 
