--- a/src/app/categorypage/categorypage.component.html
+++ b/src/app/categorypage/categorypage.component.html
@@ -33,12 +33,11 @@
             <div class="vl"></div>
 
             <div class="container1">
-             
-                <form action="/" method="GET" class="form">
-                    <input type="search" placeholder="Cerca Il tuo Benefit" class="search-field"/>
-                    <button type="submit" class="search-button">
-                        <span class="material-icons">search</span>
-                    </button>
+                <form [formGroup]="search" (ngSubmit)="submit()" >
+                    <div class="form-group">
+                    <input type="text" formControlName="playerName" class="form-control" [(ngModel)]="searchText" placeholder="Cerca Il tuo Benefit" />
+                    <button type="submit" class="search-btn"> <span class="material-icons">search</span> </button>
+                     </div>
                 </form>
             </div>
 
@@ -48,15 +47,29 @@
               </div> -->
 
         </div>
+<div >
 
-<div class="main">
-<div class="example" *ngFor="let item of listinfo">
-<a class="text"[routerLink]="['/players',item.id]" >        
-{{item.name}}
- </a>
-</div>
-</div>  
 
+
+
+    <div class="main"  *ngIf="playerShow">
+        <div class="example" *ngFor="let item of listinfo | filter:searchText">
+            <a class="text"[routerLink]="['/players',item.id,item.name]" >        
+                {{item.name}}
+                
+            </a>
+        </div>
+    </div>  
+
+
+
+<div class="main"  >
+    <div class="example" *ngFor="let item of searchList ">
+    <a class="text"[routerLink]="['/vouchers',item.id]" >        
+    {{item.shortName}}
+     </a>
+    </div>
+    </div>  
 
 
 
