--- a/src/app/players/players.component.css
+++ b/src/app/players/players.component.css
@@ -171,9 +171,23 @@
 }
 .flex {
   display: flex;
-
+  flex-direction: row;
+  align-items: center;
 
   
+}
+
+
+.form-group{
+
+  width: 340px;
+  height: 50px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border-radius: 25px;
+ display: flex;
+  border: none;
+
+
 }
 .container1 {
   width: 344px;
@@ -194,26 +208,30 @@
   
 }
 
-.search-button {
- margin-right: 15px;
- margin-top: 8px;
-  margin-left: 20px;
-  width: 22px;
-  height: 22px;
+.material-icons{
+  width: 20px;
+  height: 20px;
+  background-color:rgb(255, 255, 255);
+  border-radius: 25px;
   border: none;
-  background: #ffffff 0% 0% no-repeat padding-box;
-  opacity: 1;
 }
+.search-btn{
+  background-color: rgb(255, 255, 255);
+  border-radius:25px;
+border: none;
 
-.search-field {
-  margin-top: 8px;
-  margin-bottom: 16px;
+}
+.form-control {
+  margin-top: 3px;
   text-align: left;
   font: normal normal bold 18px/31px Ubuntu;
   letter-spacing: 0.45px;
-  color: #cccccc;
+  color: #ffffff;
   margin-left: 19px;
 }
+
+
+
 input {
   border: 0;
   outline: 0;
@@ -225,7 +243,7 @@ input:focus {
 
 .example{
 margin-top: 35px;
-/* margin-left:100px; */
+
 width: 219px;
 height: 80px;
 border: 3px solid #E3BE60;
@@ -235,12 +253,15 @@ flex-direction: row;
 text-align: center;
 font: normal normal bold 25px/35px ;
 letter-spacing: 1.25px;
-
+position:relative;
 opacity: 1;
 margin-top: 26px;
+
+
+
+
+
 }
-
-
 
 
 
@@ -248,58 +269,60 @@ margin-top: 26px;
 
 
 .text{
-  margin-top: 20px;
+  margin-top: 25px;
+  
 }
+
+#categories a{
+position: relative;
+display: inline-block;
+color: #FFFFFF;
+
+}
+
 
 .example a{
-  text-align: center;
-  text-decoration: none;
-  font-size: 25px;
-  display:inline-block;
-    
-}
-
-
-
-/* .container2{
     text-align: center;
-    font: normal normal bold 25px/35px ;
-    letter-spacing: 1.25px;
-    color: #FFFFFF;
-    opacity: 1;
-    margin-top: 26px;
-    
-} */
-
-/* 
-.container2 a{
-     font-family: Arial, Helvetica, sans-serif;
-     font-style: normal;
-     color:white;
-     font-size: 25px; 
-     
-} */
-
+    text-decoration: none;
+    font-size: 25px;
+    display:inline-block;
+}
 
 
 
 
 .main {
-  margin-left: 100px;
-    display: flex;
-    flex-wrap:wrap;
-    gap: 20px;
-    order:3;
- 
+margin-left: 100px;
+display:flex;
+gap:20px;
+order:3;
 }
+
+
+.categoryName{
+
+  color:#FFFFFF;
+  width: 78px;
+  height:28px;
+  margin-left: 410px;
+  font-size: 25px;
+}
+
+
 
 
 
 .main :hover{
-  transform: scale(1.1);
-  background-color: #ffffff;
-  color:#000 ;
+transform: scale(1.1);
+background-color: #ffffff;
+color:#000 ;
+transition: 0.3s;
 }
+
+
+
+
+
 
 a{
   text-decoration: none;
@@ -315,7 +338,9 @@ opacity: 1;
 width: 699px;
 margin-left:100px;
 margin-top: 35px;
-color: #E3BE60
+color: #E3BE60;
+text-align: center;
+
 
 }
 .border2{
@@ -323,7 +348,7 @@ border: 2px solid;
 opacity: 1;
 width: 699px;
 margin-left:100px;
-margin-top: 50px;
+margin-top: 10px;
 margin-bottom: 25px;
 color: #E3BE60
 
