--- a/src/app/purchase/purchase.component.css
+++ b/src/app/purchase/purchase.component.css
@@ -43,7 +43,7 @@ text-align: center;
 letter-spacing: 0px;
 color: #30373A;
 opacity: 1;
-font-size:47px;
+font-size:22px;
 
 
 }
@@ -134,7 +134,9 @@ opacity: 1;
  
 }
 
-
+.counter{
+    font-size:29px;
+}
 .button1{
     width: 165px;
     height: 40px;
@@ -208,13 +210,13 @@ border: none;
 
     .container4{
 margin-top: 12px;
-width: 164px;
+width:281px;
  height: 81px;
  background: #E3BE60 0% 0% no-repeat padding-box;
- border: 4px solid #30373A;
+
  border-radius: 20px;
 opacity: 1;
- margin-left: 180px;
+ margin-left: 125px;
 }
 
     .flex2{
@@ -227,7 +229,8 @@ opacity: 1;
    
     }
     .flex2 h1{
-        font-size:16px;
+        font-size:16 px;
+        font-weight: 500;
     }
 
     .container5{
