--- a/src/app/vouchers/vouchers.component.html
+++ b/src/app/vouchers/vouchers.component.html
@@ -2,13 +2,12 @@
 <div class="flex">
 <div class="playertitle">
 
-    <h1 class="text-center">
-        Trenitalia
+    <h1 class="text-center" *ngFor="let item of PlayerList">
+      {{item.shortName}}
 
     </h1>
    </div>
  <div id="material">
-    
     <i class="material-icons" >  close</i>
  </div>
 </div> 
