--- a/src/app/categorypage/categorypage.component.css
+++ b/src/app/categorypage/categorypage.component.css
@@ -278,15 +278,17 @@ color: #FFFFFF;
 .main {
 margin-left: 100px;
 display:flex;
-
+flex-wrap: wrap;
 gap:20px;
 order:3;
 
-
+max-width: 700px;
    
 }
 
-
+/* .box>* {
+  flex: 1 1 160px;
+} */
 
 
 
