--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 
- t>
+ 
     <!-- Display a payment form -->
     <form id="payment-form">
       <div id="payment-element">
@@ -7,7 +7,7 @@
       </div>
       <button id="submit">
         <div class="spinner hidden" id="spinner"></div>
-        <span id="button-text">Pay now</span>
+        <span id="button-text">{{pay}</span>
       </button>
       <div id="payment-message" class="hidden"></div>
     </form>
