--- a/src/app/players/players.component.css
+++ b/src/app/players/players.component.css
@@ -292,10 +292,13 @@ color: #FFFFFF;
 
 
 .main {
-margin-left: 100px;
-display:flex;
-gap:20px;
-order:3;
+  margin-left: 100px;
+  display:flex;
+  flex-wrap: wrap;
+  gap:20px;
+  order:3;
+  
+  max-width: 700px;
 }
 
 
