--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -296,7 +296,7 @@
                        
                         <div class="flex3">
                             <button mat-button class="btn" class="button1" (click)="onNoClick()">Chiudi</button>
-                            <button mat-raised-button class="btn "  type="submit" class="button" matStepperNext="matStepperNext" (click)="onNoClick()">Procedi</button>
+                            <button mat-raised-button class="btn "  type="submit" class="button" matStepperNext="matStepperNext" (click)="Proceed()">Procedi</button>
                         </div>
         </form>
 
