--- a/src/app/purchase/purchase.component.css
+++ b/src/app/purchase/purchase.component.css
@@ -107,7 +107,7 @@ opacity: 1;
 .container3{
 
 height: 65px;
-border:1px solid black;
+/* border:1px solid black; */
 }
 
 .button{
@@ -152,7 +152,24 @@ font: normal normal bold 16px/18px Ubuntu;
 letter-spacing: 0px;
 opacity: 1;
 }
-
+.button10{
+    width: 165px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: #CCCCCC;
+    color: #FFFFFF;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    font-size: 16px bold;
+    margin-left: 180px;
+font: normal normal bold 16px/18px Ubuntu;
+letter-spacing: 0px;
+opacity: 1;
+}
+.title{
+font-weight: 700;
+}
 .titleOrdine h1{
 text-align: center;
 font: normal normal medium 16px/31px Ubuntu;
@@ -237,9 +254,8 @@ opacity: 1;
 
         margin:0;
 	
-        
-    
-    
+        margin-left: 5px;
+        background-color: #f0fbff;
         /* background-image: url(/src/assets/images/Stripe-Logo.png) ; */
     
         background-repeat: no-repeat; 
@@ -280,4 +296,70 @@ opacity: 1;
     display: flex;
     flex-direction: row;
   margin-top: 10px;
+}
+
+/* .this is for stripe : */
+
+
+
+
+
+
+
+
+
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+
+.container6{
+
+    margin:0;
+	
+        
+    
+  
+  
+
+    
+
+    height:100%;
+    width:100%; 
+     width: 500px;
+height: 50px;
+
+
+
+
+
+
+/* background: #FFFFFF 0% 0% no-repeat padding-box; */
+border-radius: 10px;
+opacity: 1; 
+}
+.input{
+    border:none;
+    width: 200px;
+    box-shadow: whitesmoke;
+}
+
+.stripe-card{
+    margin-top: 50px;
+}
+
+.btn{
+    margin-left: 180px;
+    margin-top: 40px;
+    width: 150px;
+}
+
+
+/* baraye bare 2 az stripe */
+
+.field{
+    margin-top: 20px;
+    width:500px
 }
