--- a/src/app/stripe/stripe.component.html
+++ b/src/app/stripe/stripe.component.html
@@ -4,15 +4,15 @@
   <form novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
     <label for="name"> INFO</label> <br>
     <input type="text" class="input" formControlName="name" placeholder="name and surname">
-    <div class="stripe-card">
+    <!-- <div class="stripe-card">
       <ngx-stripe-card 
       [options]="cardOptions"
       [elementsOptions]="elementsOptions"
     ></ngx-stripe-card>
-    </div>
+    </div> -->
   
     <button type="submit" class="btn btn-warning " >
-     25
+    pay
     </button>
   </form>
   
