--- a/src/app/categorypage/categorypage.component.html
+++ b/src/app/categorypage/categorypage.component.html
@@ -25,7 +25,7 @@
 
 
             <div class="mainText">
-                <h1 class="text-left">scegli il benefit per te<br>
+                <h1 class="text-left">Scegli il benefit per te<br>
                     e la tua famiglia.</h1>
             </div>
 
