--- a/src/app/categorypage/categorypage.component.css
+++ b/src/app/categorypage/categorypage.component.css
@@ -138,7 +138,7 @@
   margin-left: 100px;
   text-align: left;
   font: normal normal bold 28px/35px Ubuntu;
-
+  font-family: 'Ubuntu', sans-serif !important;
   letter-spacing: 0.7px;
   color: #ffffff;
   text-shadow: 3px 3px 5px #0000001a;
@@ -152,12 +152,13 @@
   margin-left: 15px;
   margin-top: 65px;
   display: flex;
+  font-family: 'Ubuntu', sans-serif !important;
 }
 .flex {
   display: flex;
  flex-direction: row;
  align-items: center;
-
+ font-family: 'Ubuntu', sans-serif !important;
 
   
 }
@@ -181,6 +182,7 @@
   margin-top: 72px;
   margin-left: 20px;
   border: none;
+  font-family: 'Ubuntu', sans-serif !important;
 }
 .form {
   text-align: left;
@@ -212,6 +214,7 @@ border: none;
   letter-spacing: 0.45px;
   color: #131313;
   margin-left: 19px;
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 
@@ -240,7 +243,7 @@ letter-spacing: 1.25px;
 position:relative;
 opacity: 1;
 margin-top: 26px;
-
+font-family: 'Ubuntu', sans-serif !important;
 
 
 
@@ -254,7 +257,7 @@ margin-top: 26px;
 
 .text{
   margin-top: 25px;
-  
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 #categories a{
@@ -270,6 +273,7 @@ color: #FFFFFF;
     text-decoration: none;
     font-size: 25px;
     display:inline-block;
+    font-family: 'Ubuntu', sans-serif !important;
 }
 
 
@@ -281,7 +285,7 @@ display:flex;
 flex-wrap: wrap;
 gap:20px;
 order:3;
-
+font-family: 'Ubuntu', sans-serif !important;
 max-width: 700px;
    
 }
